# openfugu

./: README.md  pyproject.toml
benchmarks/: README.md  models.yaml
benchmarks/config/: eval_july2026.yaml
benchmarks/runs/2026-07-08-main/: REPORT.md  manifest.json  summary.json  worker_ledger.json
benchmarks/runs/2026-07-08-main/by_model/: claude-fable-5.json  claude-opus-4.8.json  claude-sonnet-5.json  deepseek-v4-pro.json  gemini-3.1-pro.json  glm-5.2.json  gpt-5.5.json  kimi-k2.7-code.json  minimax-m3.json  openfugu-ultra.json  openfugu.json  qwen3-32b-thinking.json
benchmarks/runs/2026-07-08-main/instances/: agentic_coding.jsonl  all_results.jsonl  gpqa_diamond.jsonl  humaneval_plus.jsonl  mmlu.jsonl  (+2 more)
benchmarks/tasks/: agentic_coding.jsonl  gpqa_diamond.jsonl  humaneval_plus.jsonl  livecodebench_v6.jsonl  mmlu_professional.jsonl  sample.jsonl  terminal_bench_sample.jsonl
config/: default.yaml  frontier_eval.yaml
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  HOW_IT_WORKS.md  SETUP.md  TRAINING.md
scripts/: benchmark_router.py  collect_router_labels.py  run_benchmarks.py  train_conductor_grpo.py  train_router_cma.py  train_router_sft.py  verify_benchmark_artifacts.py
src/openfugu/: __init__.py  cli.py  config.py  service.py
src/openfugu/api/: __init__.py  app.py  schemas.py
src/openfugu/conductor/: __init__.py  executor.py  memory.py  parser.py  planner.py  prompts.py  workflow.py
src/openfugu/harness/: coding.py  tool_loop.py
src/openfugu/router/: __init__.py  backbone.py  head.py  inference.py  multistep.py  sv_tune.py
src/openfugu/training/: __init__.py  conductor_grpo.py  datasets.py  rewards.py  router_cma.py  router_sft.py
src/openfugu/workers/: __init__.py  pool.py
tests/: test_api_compat.py  test_executor_isolation.py  test_router_head.py  test_workflow_parser.py
