[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfugu"
version = "0.1.0"
description = "Reverse-engineered Sakana Fugu: 0.6B router (SFT + sep-CMA-ES), GRPO conductor, 12-model benchmark suite"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Aashwin" }]
keywords = ["llm", "routing", "orchestration", "fugu", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.55.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
train = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "peft>=0.13.0",
    "cma>=3.3.0",
    "trl>=0.12.0",
    "datasets>=3.1.0",
    "wandb>=0.18.0",
    "numpy>=2.1.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[project.scripts]
openfugu = "openfugu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openfugu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
